# haskell-and-cryptocurrencies

./: .gitignore  README.md
Assignments/02-Introduction/src/: Chains.hs
Assignments/05-io/: hc-io.cabal
Assignments/05-io/src/: IO.hs
Assignments/06-higher-order/src/: HigherOrder.hs
Assignments/21-streaming/: exercises-streaming.cabal  shell.nix
Assignments/21-streaming/src/: ExercisesStreaming.hs
Assignments/23-optics/: stack.yaml
Assignments/24-more-optics-iso-exercise/src/: Data.hs  Lens.hs  Prism.hs  Traversal.hs
Assignments/24-more-optics-prism-exercise/: more-optics-prism-exercise.cabal
Assignments/24-more-optics-prism-exercise/src/: NaivePrism.hs
Assignments/24-optics/: optics.cabal
Assignments/24-optics/src/: Record.hs
Assignments/25-more-optics-iso-exercise/: more-optics-iso-exercise.cabal
Assignments/25-more-optics-iso-exercise/src/: Iso.hs
Assignments/26-gadts/: gadts.cabal
Assignments/26-gadts/src/: GADT.hs  Phantom.hs  Simple.hs
Assignments/27-more-gadts/: more-gadts.cabal
Assignments/27-more-gadts/src/: HListEnv.hs
Examples/07-testing/: testing.cabal
Examples/07-testing/src/: Sort.hs
Examples/07-testing/test/: Test.hs
Examples/10-servers/chat/: chat.cabal
Examples/10-servers/server/: server.cabal
Examples/10-servers/server/src/: Server1.hs  Server2.hs  Server3.hs  ShoutingServer.hs
Examples/12-parser-combinators/: parser.cabal  test.csv
Examples/12-parser-combinators/src/: Parser.hs
Examples/13-more-parsing/: parsec-demo.cabal  test.csv  test.xml
Examples/13-more-parsing/src/: Parsec.hs  Parser.hs
Examples/14-lambda-calculus/: lambda.cabal
Examples/14-lambda-calculus/src/: Lambda.hs
Examples/14-lambda-calculus/src/Lambda/: Church.hs  Combinators.hs  Core.hs  Reduction.hs
Examples/14-lambda-calculus/src/Lambda/Church/: Bool.hs  Class.hs  Either.hs  List.hs  Maybe.hs  Natural.hs  Pair.hs
Examples/15-data-structures/: datastructures.cabal
Examples/15-data-structures/src/: Finger.hs  Perfect.hs  Wrapped.hs
Examples/16-more-data-structures/: more-data-structures.cabal
Examples/16-more-data-structures/src/: Binary.hs  Merkle.hs
Examples/16-more-data-structures/src/Merkle/: Core.hs  Hash.hs  Path.hs
Examples/17-type-system/: dhm.cabal
Examples/17-type-system/src/: Infer.hs  Parser.hs  Types.hs
Examples/18-more-monads/: more-monads.cabal
Examples/19-free-monads/: bench.html  free-monads.cabal
Examples/19-free-monads/benchmark/: benchmark.hs
Examples/19-free-monads/src/: Concurrency.hs  Free.hs  Interpreter.hs
Examples/21-streaming/: NoStreaming.hs  NonCompositional.hs  Streaming.hs  StreamingOwn.hs  streaming-sample.cabal
Examples/22-more-streaming/: more-streaming.cabal
Examples/22-more-streaming/app/: Average1.hs  Average2.hs  Average3.hs
Examples/22-more-streaming/src/: Fold.hs  Hoist.hs  Naive.hs  Resources.hs  Stream.hs  Streaming1.hs  Streaming2.hs
Examples/24-more-optics/: more-optics.cabal
Examples/24-more-optics/src/: Monomorphic.hs  NaivePrism.hs  Polymorphic.hs  Profunctor.hs
Examples/24-more-optics/src/Monomorphic/: Iso.hs  Lens.hs  Prism.hs  Traversal.hs
Examples/24-more-optics/src/Polymorphic/: Iso.hs  Lens.hs  Prism.hs  Traversal.hs
Examples/26-gadts/: gadts.cabal
Examples/26-gadts/src/: GADT.hs  GADT2.hs  Phantom.hs
Examples/28-generic-programming/: generic-programming.cabal
Examples/28-generic-programming/src/: Contra.hs  Eq.hs  GEq.hs  GHC.hs  Generic.hs  SOP.hs  Ser.hs  Types.hs
Examples/29-type-families/: type-families.cabal
Examples/29-type-families/src/: GADT.hs  Interleave.hs
Examples/catamorphisms/: catamorphisms.cabal
Examples/handshake/: handshake.cabal
Examples/handshake/doctest/: doctest.hs
Examples/handshake/src/: Handshake.hs
Examples/lexing/: README.md  lexing.cabal
Examples/lexing/src/: ParserExample.hs
Examples/life/: LICENSE  README.md  life.cabal  stack.yaml
Examples/life/app/: Main.hs
Examples/life/src/: Life.hs
Examples/life/src/Life/: Grid.hs  Tape.hs
Examples/monads/: monads.cabal
Examples/monty-hall/: monty-hall.cabal
Examples/monty-hall/src/: MontyHall.hs
Examples/nondeterminism/: nondeterminism.cabal
Examples/template/: template.cabal
Examples/template/src/: Lens.hs  Template.hs  Use.hs
Examples/zipper/: zipper.cabal
Examples/zipper/src/: List.hs  Stream.hs  Tree.hs
Solutions/05-io/: hc-io.cabal
Solutions/06-hgher-order/: higher-order.cabal
Solutions/p2/: README.md  p2.cabal
Solutions/p2/app/: Main.hs
Solutions/p2/src/: Client.hs  DNS.hs  Message.hs  Payloads.hs  Types.hs  Util.hs
Solutions/w1/: README.md  w1.cabal
Solutions/w1/doctest/: doctest.hs
Solutions/w1/sha256sum/: Main.hs
Solutions/w1/src/: Hashing.hs  MergeSort.hs  Permutations.hs  TailRecursion.hs  Teletype.hs  Tries.hs
Solutions/w1/test/: Spec.hs
Solutions/w2/: README.md  W2.4.md  w2.cabal
Solutions/w2/philosophers1/: Main.hs
Solutions/w2/philosophers2/: Main.hs
Solutions/w2/philosophers3/: Main.hs
Solutions/w2/src/: Philosophers.hs  Transactions.hs  UnsafeIO.hs
Solutions/w2/test/: TransactionsSpec.hs
Solutions/w3/: w3.cabal
Solutions/w3/app/: Main.hs
Solutions/w3/doctest/: doctest.hs
Solutions/w3/runstack/: Main.hs
Solutions/w3/src/: Distinctions.hs  FixedPoints.hs  Stack.hs
Solutions/w3/src/Stack/: Core.hs  Lex.hs  Parse.hs
Solutions/w3/test/: Spec.hs
Solutions/w3/test/Spec/: FixedPointsSpec.hs
Solutions/w4/: README.md  bench.html  stack.yaml  w4.cabal
Solutions/w4/app/: fromWallet.hs  toWallet.hs  validate.hs
Solutions/w4/benchmark/: benchmark.hs
Solutions/w4/doctest/: doctest.hs
Solutions/w4/src/: Mini.hs  Nested.hs  WalletParamsParser.hs
Solutions/w4/test/: Spec.hs
Solutions/w5/: README.md  derivation.txt  w5.cabal
Solutions/w5/doctest/: doctest.hs
Solutions/w5/src/: Delayed.hs  Free.hs
Solutions/w6/: README.md  w6.cabal
Solutions/w6/doctest/: Doctest.hs
Solutions/w6/src/: Codensity.hs  Dict.hs  Foldr.hs  Par.hs
Solutions/w6/test/: Spec.hs
Solutions/w7/: w7.cabal
Solutions/w7/src/: FunList.hs  Optics.hs  Prism.hs  Tree.hs
(+17 files in other folders)
