name:                testing
version:             0.1.0.0
homepage:            https://github.com/brunjlar/testing#readme
author:              Lars Bruenjes
maintainer:          lars.bruenjes@iohk.io
copyright:           (c) 2017 Lars Bruenjes
category:            Teaching
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Sort
  other-modules:
  ghc-options:         -Wall -fhpc
  build-depends:       base >= 4.7 && < 5
                     , hspec
                     , QuickCheck
  default-language:    Haskell2010

test-suite sort-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Test.hs
  build-depends:       base >= 4.7 && < 5
                     , hspec
                     , QuickCheck
                     , testing
  ghc-options:         -Wall
  default-language:    Haskell2010
