name:                lambda
version:             0.1.0.0
author:              Lars Bruenjes
maintainer:          lars.bruenjes@iohk.io
copyright:           (c) 2017 Lars Bruenjes
category:            Teaching
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lambda
                     , Lambda.Church
                     , Lambda.Church.Class
                     , Lambda.Church.Bool
                     , Lambda.Church.Either
                     , Lambda.Church.List
                     , Lambda.Church.Maybe
                     , Lambda.Church.Natural
                     , Lambda.Church.Pair
                     , Lambda.Combinators
                     , Lambda.Core
                     , Lambda.Reduction
  build-depends:       base >= 4.7 && < 5
                     , containers
  default-language:    Haskell2010
  ghc-options:         -Wall, -O3
  default-extensions:  OverloadedStrings
                     , ScopedTypeVariables
                     , InstanceSigs
