name: dhm
version: 0.1
build-type: Simple
cabal-version: >= 1.10

executable dhm
  hs-source-dirs: src
  default-language: Haskell2010
  build-depends:
    base >= 4.9 && < 5,
    containers,
    mtl,
    haskeline,
    parsec
  main-is: Infer.hs
  other-modules:
    Parser
    Repl
    Syntax
    Types
