name:                free-monads
version:             0.1.0.0
author:              Lars Bruenjes
maintainer:          lars.bruenjes@iohk.io
copyright:           (c) 2017 Lars Bruenjes
category:            Training
build-type:          Simple
extra-source-files:  README.md
                   , bench.html
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Concurrency
                     , Free
                     , Interpreter
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , transformers
                     , mtl
  default-language:    Haskell2010
  default-extensions:  InstanceSigs
  ghc-options:         -Wall

benchmark bench
  type:                exitcode-stdio-1.0
  hs-source-dirs:      benchmark
  main-is:             benchmark.hs
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , criterion
                     , deepseq
  ghc-options:         -Wall
  default-language:    Haskell2010

