name:                streaming-sample
version:             0.1.0.0
build-type:          Simple
cabal-version:       >=1.10

executable nostreaming
  hs-source-dirs:      .
  main-is:             NoStreaming.hs
  build-depends:       base >= 4.7 && < 5
                     , directory
                     , filepath
  ghc-options:         -Wall -O3 -rtsopts
  default-language:    Haskell2010

executable noncompositional
  hs-source-dirs:      .
  main-is:             NonCompositional.hs
  build-depends:       base >= 4.7 && < 5
                     , directory
                     , filepath
  ghc-options:         -Wall -O3 -rtsopts
  default-language:    Haskell2010

executable streamingown
  hs-source-dirs:      .
  main-is:             StreamingOwn.hs
  build-depends:       base >= 4.7 && < 5
                     , directory
                     , filepath
  ghc-options:         -Wall -O3 -rtsopts
  default-language:    Haskell2010

executable streaming
  hs-source-dirs:      .
  main-is:             Streaming.hs
  build-depends:       base >= 4.7 && < 5
                     , conduit
                     , directory
                     , filepath
                     , mtl
                     , pipes
                     , streaming
  ghc-options:         -Wall -O3 -rtsopts
  default-language:    Haskell2010
