name:                more-streaming
version:             0.1.0.0
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Fold
                     , Hoist
                     , Naive
                     , Resources
                     , Stream
                     , Streaming1
                     , Streaming2
  build-depends:       base >= 4.7 && < 5
                     , mtl
                     , resourcet
  default-language:    Haskell2010
  default-extensions:  InstanceSigs
  ghc-options:         -Wall

executable average1
  hs-source-dirs:      app
  main-is:             Average1.hs
  build-depends:       base >= 4.7 && < 5
  ghc-options:         -Wall -rtsopts
  default-language:    Haskell2010

executable average2
  hs-source-dirs:      app
  main-is:             Average2.hs
  build-depends:       base >= 4.7 && < 5
  ghc-options:         -Wall -rtsopts
  default-language:    Haskell2010

executable average3
  hs-source-dirs:      app
  main-is:             Average3.hs
  build-depends:       base >= 4.7 && < 5
                     , more-streaming
  ghc-options:         -Wall -rtsopts
  default-language:    Haskell2010

