name:                gadts
version:             0.1.0.0
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     GADT
                     , GADT2
                     , Phantom 
                     , Simple
  build-depends:       base >= 4.7 && < 5
                     , text
  default-language:    Haskell2010
  default-extensions:  InstanceSigs
  ghc-options:         -Wall
