name:                generic-programming
version:             0.1.0.0
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Contra
                     , Eq
                     , Generic
                     , GEq
                     , GHC
                     , Ser
                     , SOP
                     , Types
  build-depends:       base >= 4.7 && < 5
                     , binary
                     , generics-sop
  default-language:    Haskell2010
  default-extensions:  InstanceSigs
  ghc-options:         -Wall
