name:                handshake
version:             0.1.0.0
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Handshake
  build-depends:       base >= 4.7 && < 5
                     , async
                     , containers
                     , free
                     , mtl
                     , network
  default-language:    Haskell2010
  ghc-options:         -Wall

test-suite handshake-doctest 
  type:                exitcode-stdio-1.0
  hs-source-dirs:      doctest
  main-is:             doctest.hs
  build-depends:       base >= 4.7 && < 5
                     , doctest
  default-language:    Haskell2010
