name:                lexing
version:             0.1.0.0
author:              Lars Bruenjes
maintainer:          lars.bruenjes@iohk.io
copyright:           (c) 2017 Lars Bruenjes
category:            Training
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     ParserExample
  build-depends:       base >= 4.7 && < 5
                     , parsec
  default-language:    Haskell2010
  ghc-options:         -Wall
