name:                monty-hall
version:             0.1.0.0
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     MontyHall
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , free
                     , random
                     , semigroups
  default-language:    Haskell2010
  ghc-options:         -Wall
