name:                zipper
version:             0.1.0.0
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     List
                     , Stream
                     , Tree
  build-depends:       base >= 4.7 && < 5
                     , comonad
                     , mtl
  default-language:    Haskell2010
  ghc-options:         -Wall
