name:                p2
version:             0.1.0.0
license:             BSD3
license-file:        LICENSE
author:              Lars Bruenjes
maintainer:          lars.bruenjes@iohk.io
copyright:           (c) 2017 Lars Bruenjes
category:            Training
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Client
                     , DNS
                     , Message
                     , Payloads
                     , Types
                     , Util
  build-depends:       base >= 4.7 && < 5
                     , async
                     , base16-bytestring
                     , binary
                     , bytestring
                     , cryptonite
                     , dns
                     , iproute
                     , memory
                     , network
                     , network-info
                     , random
                     , time
  default-language:    Haskell2010
  ghc-options:         -Wall

executable bitcoin
  hs-source-dirs:      app
  main-is:             Main.hs
  build-depends:       base >= 4.7 && < 5
                     , p2
  ghc-options:         -Wall
  default-language:    Haskell2010

