name:                w2
version:             0.1.0.0
license:             BSD3
author:              Lars Bruenjes
maintainer:          lars.bruenjes@iohk.io
copyright:           (c) 2017 Lars Bruenjes
category:            Training
build-type:          Simple
extra-source-files:  README.md
                   , W2.4.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Philosophers
                     , Transactions
                     , UnsafeIO
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , stm
  default-language:    Haskell2010
  default-extensions:  RecordWildCards
  ghc-options:         -Wall

executable philosophers1
  hs-source-dirs:      philosophers1
  main-is:             Main.hs
  build-depends:       base >= 4.7 && < 5
                     , w2
  ghc-options:         -Wall -threaded -with-rtsopts=-N2
  default-language:    Haskell2010

executable philosophers2
  hs-source-dirs:      philosophers2
  main-is:             Main.hs
  build-depends:       base >= 4.7 && < 5
                     , w2
  ghc-options:         -Wall -threaded -with-rtsopts=-N2
  default-language:    Haskell2010

executable philosophers3
  hs-source-dirs:      philosophers3
  main-is:             Main.hs
  build-depends:       base >= 4.7 && < 5
                     , w2
  ghc-options:         -Wall -threaded -with-rtsopts=-N2
  default-language:    Haskell2010

test-suite transactions-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             TransactionsSpec.hs
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , hspec
                     , w2
  ghc-options:         -Wall
  default-language:    Haskell2010
