name:                w3
version:             0.1.0.0
license:             BSD3
license-file:        LICENSE
author:              Lars Bruenjes
maintainer:          lars.bruenjes@iohk.io
copyright:           (c) 2017 Lars Bruenjes
category:            Training
build-type:          Simple
extra-source-files:  README.md
                   , src/Stack/fact5.stack
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Distinctions
                     , FixedPoints
                     , Stack
                     , Stack.Core
                     , Stack.Lex
                     , Stack.Parse
  build-depends:       base >= 4.7 && < 5
                     , parsec
                     , QuickCheck
  default-language:    Haskell2010
  ghc-options:         -Wall

executable runstack
  hs-source-dirs:      runstack
  main-is:             Main.hs
  build-depends:       base >= 4.7 && < 5
                     , w3
  ghc-options:         -Wall
  default-language:    Haskell2010

test-suite doctest
  type:                exitcode-stdio-1.0
  hs-source-dirs:      doctest
  main-is:             doctest.hs
  build-depends:       base >= 4.7 && < 5
                     , doctest
  ghc-options:         -Wall
  default-language:    Haskell2010

test-suite test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       Spec.FixedPointsSpec
  build-depends:       base >= 4.7 && < 5
                     , hspec
                     , QuickCheck
                     , w3
  ghc-options:         -Wall
  default-language:    Haskell2010

executable distinguish
  hs-source-dirs:      app
  main-is:             Main.hs
  build-depends:       base >= 4.7 && < 5
                     , w3
  ghc-options:         -Wall
  default-language:    Haskell2010

