name:                w4
version:             0.1.0.0
license:             BSD3
license-file:        LICENSE
author:              Lars Bruenjes
maintainer:          lars.bruenjes@iohk.io
copyright:           (c) 2017 Lars Bruenjes
category:            Training
build-type:          Simple
extra-source-files:  README.md
                   , bench.html
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Mini
                     , Nested
                     , WalletParamsParser
  build-depends:       base >= 4.7 && < 5
                     , base16-bytestring
                     , base58-bytestring
                     , bytestring
                     , criterion
                     , cryptonite
                     , deepseq
                     , memory
                     , mtl
                     , optparse-applicative
                     , QuickCheck
  default-language:    Haskell2010
  ghc-options:         -Wall -O3

test-suite doctest
  type:                exitcode-stdio-1.0
  hs-source-dirs:      doctest
  main-is:             doctest.hs
  build-depends:       base >= 4.7 && < 5
                     , doctest
  ghc-options:         -Wall
  default-language:    Haskell2010

test-suite test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base >= 4.7 && < 5
                     , hspec
                     , QuickCheck
                     , w4
  ghc-options:         -Wall
  default-language:    Haskell2010

benchmark bench
  type:                exitcode-stdio-1.0
  hs-source-dirs:      benchmark
  main-is:             benchmark.hs
  build-depends:       base >= 4.7 && < 5
                     , criterion
                     , w4
  ghc-options:         -Wall -O3
  default-language:    Haskell2010

executable validate
  hs-source-dirs:      app
  main-is:             validate.hs
  build-depends:       base >= 4.7 && < 5
                     , w4
  ghc-options:         -Wall -O3
  default-language:    Haskell2010

executable toWallet
  hs-source-dirs:      app
  main-is:             toWallet.hs
  build-depends:       base >= 4.7 && < 5
                     , w4
  ghc-options:         -Wall -O3
  default-language:    Haskell2010

executable fromWallet
  hs-source-dirs:      app
  main-is:             fromWallet.hs
  build-depends:       base >= 4.7 && < 5
                     , w4
  ghc-options:         -Wall -O3
  default-language:    Haskell2010
