name:                w5
version:             0.1.0.0
license:             BSD3
license-file:        LICENSE
author:              Lars Bruenjes
maintainer:          lars.bruenjes@iohk.io
copyright:           (c) 2017 Lars Bruenjes
category:            Training
build-type:          Simple
extra-source-files:  README.md
                   , derivation.txt
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Delayed
                     , Free
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010
  ghc-options:         -Wall -O3

test-suite doctest
  type:                exitcode-stdio-1.0
  hs-source-dirs:      doctest
  main-is:             doctest.hs
  build-depends:       base >= 4.7 && < 5
                     , doctest
  ghc-options:         -Wall
  default-language:    Haskell2010
