name:                w6
version:             0.1.0.0
license:             BSD3
license-file:        LICENSE
author:              Lars Bruenjes
maintainer:          lars.bruenjes@iohk.io
copyright:           (c) 2017 Lars Bruenjes
category:            Training
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Codensity
                     , Dict
                     , Foldr
                     , Free
                     , Par
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010
  ghc-options:         -Wall

test-suite doctest
  type:                exitcode-stdio-1.0
  hs-source-dirs:      doctest
  main-is:             Doctest.hs
  build-depends:       base >= 4.7 && < 5
                     , doctest
  ghc-options:         -Wall
  default-language:    Haskell2010

test-suite test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base >= 4.7 && < 5
                     , hspec
                     , QuickCheck
                     , w6
  ghc-options:         -Wall
  default-language:    Haskell2010
