name:                w7
version:             0.1.0.0
license:             BSD3
license-file:        LICENSE
author:              Lars Bruenjes
maintainer:          lars.bruenjes@iohk.io
copyright:           (c) 2017 Lars Bruenjes
category:            Training
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     FunList
                     , Optics
                     , Prism
                     , Tree
  build-depends:       base >= 4.7 && < 5
                     , mtl
                     , profunctors
                     , tagged
  default-language:    Haskell2010
  ghc-options:         -Wall
  default-extensions:  DeriveFunctor
                     , InstanceSigs
                     , RankNTypes
                     , ScopedTypeVariables
